openshift/configure-istio-monolith.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-coolstore
  namespace: monolith
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coolstore
  namespace: monolith
spec:
  hosts:
    - "*"
  gateways:
    - istio-coolstore
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: coolstore
