openshift/unroute-to-new-catalog-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coolstore
  namespace: monolith
spec:
  hosts:
    - "*"
  gateways:
    - istio-coolstore
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: coolstore
